# devcontainer-CPP-QT5-template

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
src/: mainwindow.cpp  mainwindow.ui
